# mysql-fastapi

./: .gitignore  README.md  env_sample.txt  pyproject.toml  railway.toml  requirements.txt
alembic/versions/: 8bc27374e5df_2024_02_20-user_table.py
app/: main.py
app/config/: settings.py
app/users/: apis.py  models.py  schemas.py  selectors.py  services.py
